--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 # Site settings
 # -----------------------------------------------------------------------------
 
-title: My website # the website title (if blank, full name will be used instead)
+title: Vamsi Anumula # the website title (if blank, full name will be used instead)
 first_name: Vamsi
 middle_name: 
 last_name: Anumula
@@ -13,7 +13,6 @@ description: > # the ">" symbol means to ignore newlines until "footer_text:"
 footer_text: >
   Powered by <a href="https://jekyllrb.com/" target="_blank">Jekyll</a> with <a href="https://github.com/alshedivat/al-folio">al-folio</a> theme.
   Hosted by <a href="https://pages.github.com/" target="_blank">GitHub Pages</a>.
-  Photos from <a href="https://unsplash.com" target="_blank">Unsplash</a>.
 keywords: jekyll, jekyll-theme, academic-website, portfolio-website # add your own keywords or leave empty
 lang: en # the language of your site (for example: en, fr, cn, ru, etc.)
 icon: ⚛️ # the emoji used as the favicon (alternatively, provide image name in /assets/img/)
@@ -161,6 +160,11 @@ collections:
     defaults:
       layout: post
     output: true
+  notes:
+    defaults:
+      layout: post
+    output: true
+    permalink: /notes/:year/:title/
   projects:
     output: true
   teachings:
